# OpenClassrooms_Project_11

./: .coverage  README.md  clubs.json  competitions.json  exceptions.py  pyproject.toml  requirements.txt  server.py  utils.py
cov_html/: class_index.html  function_index.html  index.html  server_py.html  status.json
flake8-report/: index.html
static/: styles.css
templates/: base.html  booking.html  change_password.html  index.html  points_board.html  profile.html  sign_up.html  welcome.html
tests/: conftest.py
tests/functional_tests/: test_app.py
tests/integration_tests/: test_app.py  test_views.py
tests/performance_tests/: clubs_tmp.json  competitions_tmp.json  locustfile.py
tests/unit_tests/: test_app.py  test_utils.py  test_views.py
unit_tests/: conftest.py  test_app.py
