[project]
name = "openclassrooms-project-11"
version = "0.1.0"
description = ""
authors = [
    {name = "NM",email = "nicolas.marie.nm@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "flask (>=3.1.3,<4.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-flask (>=1.3.0,<2.0.0)",
    "selenium (>=4.41.0,<5.0.0)",
    "flask-testing (>=0.8.1,<0.9.0)",
    "locust (>=2.43.3,<3.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "flake8-html (>=0.4.3,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
